# GameTrak-Liberation

./: .gitignore  README.md  THIRD_PARTY.md
docs/: prior_art.md  protocol.md
p5js/gametrak_midi_receiver_p5v1/: README.md  index.html  sketch.js
p5js/gametrak_midi_receiver_p5v2/: README.md  index.html  sketch.js
p5js/gametrak_ws_receiver_p5v1/: README.md  index.html  sketch.js
p5js/gametrak_ws_receiver_p5v2/: README.md  index.html  sketch.js
processing/gametrak_osc_receiver/: README.md  gametrak_osc_receiver.pde
processing/gametrak_osc_transmitter/: GameTrakDirectHid.java  README.md  gametrak_osc_transmitter.pde
processing/gametrak_standalone/: GameTrakDirectHid.java  README.md  gametrak_standalone.pde
python/: pyproject.toml  requirements.txt
python/gametrak/: __init__.py  constants.py  diagnose.py  hid_backend.py  midi.py  osc.py  playback.py  ps2.py  record.py  report.py  stdout.py  values.py  ws.py
python/tests/: test_diagnose.py  test_midi.py  test_osc.py  test_playback.py  test_record.py  test_report_decode.py  test_stdout.py  test_values.py  test_ws.py
python/tools/: dump_gametrak_reports.py  dump_hid_devices.py  gametrak_osc.py
sample_reports/: README.md  gametrack_sample_10_second_recording.jsonl
sample_reports/additional_recordings/: both_joysticks_12oclock_away_001.jsonl  both_joysticks_9oclock_001.jsonl  both_tethers_short_pull_001.jsonl  left_joystick_x_001.jsonl  left_joystick_xy_circle_001.jsonl  left_joystick_y_001.jsonl  left_tether_r_001.jsonl  ps2_init_001.jsonl  right_joystick_x_001.jsonl  right_joystick_y_001.jsonl  (+1 more)
